[add]: add new views and resetful api
